--- a/Laboratorios/Laboratorio3/styles.css
+++ b/Laboratorios/Laboratorio3/styles.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+
 body {
     box-sizing: border-box;
     height: 100vh;
-    overflow: hidden;
-
+    
     background-image: url(img/background.jpg);
     background-attachment: fixed;
     background-position: center;
@@ -16,27 +17,9 @@ body {
 
     justify-content: space-between;
     align-items: center;
+
+    font-family: 'Quicksand', sans-serif;
 }
-
-nav {
-    width: 100%;
-    height: auto;
-
-    display: flex;
-
-    flex-flow: row wrap;
-    justify-content: flex-end;
-}
-
-
-.btn {
-    padding: 0.5em;
-    border: 1px solid black;
-    border-radius: 10px;
-    margin: 0.5em;
-    
-}
-
 
 header nav {
     width: 100%;
@@ -48,8 +31,31 @@ header nav {
     justify-content: flex-end;
 }
 
+
+.btn {
+    color:  white;
+    padding: 0.5em;
+    margin: 0.5em;
+
+    background: gray;
+    border: 1px solid black;
+    border-radius: 0.5em;
+}
+
+.deep {
+    background-color: #673AB7;
+}
+
+.indigo {
+    background-color: #3F51B5;
+}
+
+.red {
+    background-color: #D81B60;
+}
+
 main {
-    width: 30%;
+    width: 90%;
     height: auto;
 
     display: flex;
@@ -68,7 +74,30 @@ main>img {
     margin: 1em;
 
     background: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+}
 
+main h1 {
+    width: 60%;
+    height: auto;
+
+    background: rgba(255, 255, 255, 0.5);
+    text-transform: uppercase;
+    text-align: center;
+
+    color: darkred;
+    
+    font-size: 5em;
+}
+
+main hr {
+    width: 80%;
+
+    background: white;
+    height: 7px;
+
+    border-radius: 5px;
+    border: none;
 }
 
 main .logos{
@@ -99,5 +128,20 @@ main .logos{
 }
 
 footer {
+    width: 100%;
+    height: auto;
 
+    display: flex;
+    justify-content: space-between;
+}
+
+footer>span {
+    padding: 0.7em;
+    color: whitesmoke;
+
+    font-size: 0.8em;
+    text-decoration: underline;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 0.5em;
 }
